# mm-player-base-simulations

./: .gitignore  README.md  justfile  main.py  pyproject.toml  thoughts.md
docs/plans/: 2026-04-10-player-base-simulation-v1.md  2026-04-10-session-summary.md
scenarios/: README.md  all_progression_base.toml  all_progression_on.toml  defaults.toml  experience_only.toml  gear_transfer_off.toml  gear_transfer_on.toml  homogeneous_trios.toml  random_mm.toml  random_mm_all_progression.toml  season_progression_off.toml  season_progression_on.toml  skill_gear_composite.toml  skill_only.toml  skill_progression_off.toml  skill_progression_on.toml  skill_weighted.toml  sweep_mm_skill_weight.toml  sweep_skill_gear_grid.toml  sweep_skill_weight.toml
src/debug/: debug_rating.py
src/mm_sim/: __init__.py  churn.py  cli.py  compare.py  config.py  engine.py  experience.py  experiments.py  frequency.py  gear.py  parties.py  plots.py  population.py  scenarios.py  season_progression.py  seeding.py  skill_progression.py  snapshot.py  sweep_plots.py  sweeps.py
tests/: test_cli.py  test_config_progression.py  test_elo_extract.py  test_engine_extraction_integration.py  test_engine_progression.py  test_engine_smoke.py  test_extraction_outcomes.py  test_feedback_loop.py  test_gear_extraction.py  test_gear_transfer.py  test_matchmaker.py  test_outcomes_and_updaters.py  test_population.py  test_season_progression.py  test_season_progression_extraction.py  test_skill_progression.py  test_snapshot.py  test_softmax_winners.py  test_sweeps.py  test_two_stage_matchmaker.py
(+32 files in other folders)
