[project]
name = "mm-player-base-simulations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mm_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
